javascript mostly complete

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             <div hidden id="score-card" class="card">
                 <h2> All done!</h2>
                 <p> Your final Score is <span id="score"></span></p>
+                <form id="submission-form" class="inline-form">
+                    <label for="initials">Enter initials: </label>
+                    <input type="text" id="initials">
+                    <button id="submit" class="button">Submit</button>
+                </form>
             </div>
 <!-- the higscore card to see all the scores-->
             <div hidden id="highscore-card" class="card">
